// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
#ifndef UNNAMING_GAME_SRC_MAP_BUILDINGIMPLEMENTATION_H_
#define UNNAMING_GAME_SRC_MAP_BUILDINGIMPLEMENTATION_H_
#include "./Building.h"
class BuildingImplementation {
 public:
   virtual size_t index() const = 0;
 private:
};
#endif  // UNNAMING_GAME_SRC_MAP_BUILDINGIMPLEMENTATION_H_
