@startuml
hide members
skinparam linetype ortho
together {
  interface Building
  interface Building_Implementation as "Building::Implementation"
}
together {
  class BaseBuilding
  class BaseBuilding_Implementation as "BaseBuilding::Implementation"
}
together {
  class LinkBuilding
  class LinkBuilding_Implementation as "LinkBuilding::Implementation"
}
Building o-- Building_Implementation
Building ..> Building_Implementation
BaseBuilding *---- BaseBuilding_Implementation
BaseBuilding ....> BaseBuilding_Implementation
LinkBuilding *---- LinkBuilding_Implementation
LinkBuilding ....> LinkBuilding_Implementation
BaseBuilding - LinkBuilding
(BaseBuilding, LinkBuilding) ..|> Building
BaseBuilding_Implementation - LinkBuilding_Implementation
Building_Implementation <|-- (BaseBuilding_Implementation, LinkBuilding_Implementation)
@enduml
